--- a/css/structure/gameplay/stage/move_box.css
+++ b/css/structure/gameplay/stage/move_box.css
@@ -20,4 +20,5 @@
     vertical-align: middle;
     cursor: pointer;
     font-size: 18px;
+    font-family: ArrowFont, ArrowFont2;
 }
